Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL)
-
None
Description
As ROW-format binlogging CREATE-TABLE-SELECT stores both the CREATE-TABLE query and Rows-log-events of inserted data in the transactional cache, and at an error either the new CREATEd table is removed and the cache gets reset, there is no reason to alert the slave side with an Incident event. That is true even when the create table type is non-transactional.
A patch for MDEV-35207 avoids the Incident event logging.
Attachments
Issue Links
- relates to
-
MDEV-14436 Incorrect binlog order on slave for MyISAM statements
-
- Confirmed
-
-
MDEV-36027 Errored-out CREATE-SELECT does not binlog results of any function modifying non-transactional table
-
- Stalled
-