MDEV-35502 incremental commit to address a special case of ..

a failing CREATE-TABLE-SELECT in binlog_commit.

A few tests of MDEV-35207/MDEV-35502/MDEV-35499 base patch demonstrate
behavior of failing CREATE-TABLE-SELECT in various execution branches. This commit
addresses an execution branch when there can be an error on
   ha_commit_trans()..binlog_commit()
path. The error may be caused e.g by a transaction cache write
or gtid strict mode setting.
Specifically to the cache write, binlog_commit() may find an active binlog incident
flag up. Considering MDEV-35506 fixes it would be converted by
   ha_commit_trans()..binlog_rollback() (see MDEV-35506 patch/branch)
into a written to binlog Incident event.
That reveals measures designed for MDEV-35502 to drop the flag are insufficient.
Indeed in the current circumstances they would drop the Incident flag
only after ha_commit_stmt(), which is too late.

This commit prevents from the incident flag be raised inside
   ha_commit_stmt()..binlog_commit()
path. Why it is viable is that the very possibility of the Incident-event ridden
error, as it turns out via analysis, was due to the fact that
select_insert::prepare_eof() did not correctly compute which binlog
cache to finalize the ROW-based pending event in by the
finishing/committing CREATE-TABLE-SELECT.

(The failure to recognize the correct cache could weigh as a minor bug
that did not surface thanks to binlog_commit's grace of flushing of
any pending event of either cache "just in case").
After the cache type correction the pending event, if any, gets
flushed into the transactional cache before ha_commit_stmt(). Hence
binlog_commit() having nothing to flush loses possibility of
raising the incident flag because of a binlog cache issue.